2012-04-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-61
	* fix StringIndexOutOfBoundsException at VStringParameter.java

2012-04-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-60
	* update reconnect method (ConfDB.java).

2012-04-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-59
	* Improve reconnect method (ConfDB.java).
	
2012-04-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-58
	* Improve reconnect method (ConfDB.java).
	
2012-04-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-57
	* Update ConfCache (by Ulf).
	* Update PathStreamDataSetAssoc table definition at hlt_create_db_ORACLE.sql
	
2012-04-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-56
	* Changes in PrimaryDatasets editor:
	- Use Red and Blue colours for unassigned paths and paths already in the stream (also in "add path" list).
	- Two columns instead of three.
	* Embedded prescales editor 2px higher.  

2012-04-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-55
	* Fix bug: remove path from unassigned datasets.
	* Enables all possible paths and add red background for shared paths in Datasets Editor.
	* Shows all possible paths in the list to add paths to datasets. 
	
2012-04-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-54
	* Use TNS connections to export configurations. 

2012-04-16 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-53
	* fix small bug in re-labelling prescaler instance based on path name

2012-04-16 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-52
	* Fix nullPointerException in Search&Replace tool.
	* Record elapsed time for last opened configuration.

2012-04-15 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-51
	* simplifications and bug fixes, eps. IGNORE/NEGATE within sequences no longer lost on IMPORT
	