@@ -1,3 +1,3 @@
-confdb.version=V01-06-61
+confdb.version=V01-06-62
 confdb.contact=raul.jimenez.estupinan@cern.ch
 confdb.url=http://j2eeps.cern.ch/cms-project-confdb-hltdev/
